--- a/views/home.html
+++ b/views/home.html
@@ -11,14 +11,15 @@
 		<li>
 			<a href="javascript: void(0);" class="ui-items-title">
 				<i class="ui-icon">&#xe64b;</i>
-				<span>常用操作</span>
+				<span>常用场景</span>
 			</a>
 			<div class="ui-items-call">
-				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe739;</i><span>按钮</span></a>
-				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe751;</i><span>表单</span></a>
-				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe646;</i><span>选项卡</span></a>
-				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe655;</i><span>字体</span></a>
-				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe657;</i><span>导航</span></a>
+				<a href="javascript: void(0);" ui-sref="home.button"><i class="ui-icon ui-icon-show">&#xe622;</i><span>按钮</span></a>
+				<a href="javascript: void(0);" ui-sref="home.tables"><i class="ui-icon ui-icon-show">&#xe612;</i><span>表格</span></a>
+				<a href="javascript: void(0);" ui-sref="home.form"><i class="ui-icon ui-icon-show">&#xe66b;</i><span>表单</span></a>
+				<a href="javascript: void(0);" ui-sref="home.tabs"><i class="ui-icon ui-icon-show">&#xe627;</i><span>选项卡</span></a>
+				<a href="javascript: void(0);" ui-sref="home.iconfont"><i class="ui-icon ui-icon-show">&#xe629;</i><span>字体</span></a>
+				<a href="javascript: void(0);" ui-sref="home.loading"><i class="ui-icon ui-icon-show">&#xe626;</i><span>loading</span></a>
 			</div>
 		</li>
 		<li>
