--- a/sass/ui/module/reset.scss
+++ b/sass/ui/module/reset.scss
@@ -10,7 +10,7 @@ sup{vertical-align:text-top}
 a{text-decoration:none;color:inherit;}
 sub{vertical-align:text-bottom}
 input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit}
-body{font:14px/1.5 \5FAE\8F6F\96C5\9ED1,sans-serif;}
+body{font:14px/1.5 \5FAE\8F6F\96C5\9ED1,sans-serif; color: #333;}
 .clearfix:after{content:"\0020";height:0;display:block;clear:both;}
 .clearfix{zoom:1;}
 em,i{font-style: normal;}
