--- a/views/font.html
+++ b/views/font.html
@@ -1,21 +1,11 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <title>IconFont</title>
-    <link rel="stylesheet" href="demo.css">
-
-    
-</head>
-<body>
+<link rel="stylesheet" href="dist/libs/relaui/font/demo.css">
 <style type="text/css">
     @font-face {font-family: "iconfont";
-      src: url('iconfont.eot'); /* IE9*/
-      src: url('iconfont.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
-      url('iconfont.woff') format('woff'), /* chrome, firefox */
-      url('iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-      url('iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+      src: url('dist/libs/relaui/font/iconfont.eot'); /* IE9*/
+      src: url('dist/libs/relaui/font/iconfont.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
+      url('dist/libs/relaui/font/iconfont.woff') format('woff'), /* chrome, firefox */
+      url('dist/libs/relaui/font/iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+      url('dist/libs/relaui/font/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
     }
 
     .iconfont {
@@ -26,8 +16,11 @@
       -webkit-text-stroke-width: 0.2px;
       -moz-osx-font-smoothing: grayscale;
     }
+    body .main.markdown{
+        padding: 30px;
+    }
 </style>
-<div class="main markdown">
+<div class="main markdown" style="background: #fff;">
     <h1>IconFont 图标</h1>
     <ul class="icon_lists clear">
         
@@ -225,13 +218,13 @@
         
             <li>
             <i class="icon iconfont">&#xe723;</i>
-                <div class="name">关闭1</div>
+                <div class="name">关闭</div>
                 <div class="code">&amp;#xe723;</div>
             </li>
         
             <li>
             <i class="icon iconfont">&#xe727;</i>
-                <div class="name">加号1</div>
+                <div class="name">加号</div>
                 <div class="code">&amp;#xe727;</div>
             </li>
         
@@ -910,5 +903,3 @@
     <p>"iconfont"是你项目下的font-family。可以通过编辑项目查看，默认是"iconfont"。</p>
     </blockquote>
 </div>
-</body>
-</html>
