--- a/views/font.html
+++ b/views/font.html
@@ -21,7 +21,7 @@
     }
 </style>
 <div class="main markdown" style="background: #fff;">
-    <h1>IconFont 图标</h1>
+    <div class="ui-quote">IconFont 图标</div>
     <ul class="icon_lists clear">
         
             <li>
