--- a/sass/ui/module/button.scss
+++ b/sass/ui/module/button.scss
@@ -1,8 +1,264 @@
-.ui-btn{
-	display: block;
+$raw: #fcfcfc;
+$defalut: #009688;
+$disabled: #fbfbfb;
+$normal: #1e9fff;
+$warm: #f7b824;
+$danger: #ff5722;
+
+/* 内置 */
+$primary: #18a689;
+$success: #1c84c6;
+$info: #23c6c8;
+$warning: #f8ac59;
+$deepred: #ed5565;
+$black: #424f63;
+$maroon: #900;
+
+[class^="ui-btn"]{
+	display: inline-block;
+	color: #fff;
+	font-size: 13px;
+	padding: 8px 16px;
+	border-radius: 3px;
+	border-style: solid;
+	border-width: 1px;
+	@include transition(background-color .25s);
+	&:active{
+		-webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+		box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+	}
+	&.ui-large{
+		font-size: 18px;
+		padding: 9px 18px;
+		border-radius: 5px;
+	}
+	&.ui-small{
+		font-size: 12px;
+		padding: 5px 10px;
+	}
+	&.ui-super{
+		font-size: 10px;
+		padding: 0 3px;
+	}
+	>i{
+		font-family: 'relaicon';
+		font-size: 15px;
+		line-height: 15px;
+		margin-right: 3px;
+	}
+	&.ui-font{
+		width: 34px;
+		height: 34px;
+		padding: 0;
+		line-height: 34px;
+		text-align: center;
+		>i{
+			font-size: 16px !important;
+			margin: 0;
+		}
+		&.ui-small{
+			width: 28px;
+			height: 28px;
+			font-size: 14px !important;
+			line-height: 28px;
+		}
+	}
+	&.ui-width{
+		width: 100%;
+		text-align: center;
+	}
 }
-input,
-select,
-textarea{
-	outline: none;
+.ui-btn-raw{
+	color: #555;
+	background-color: $raw;
+	border-color: #ccc;
+	&:hover{
+		background-color: darken($raw, 5%);
+	}
+}
+.ui-btn-disabled{
+	color: #c9c9c9;
+	background-color: $disabled;
+	border-color: #e6e6e6;
+	&:hover{
+		cursor: not-allowed;
+		background-color: $disabled;
+	}
+	&:active{
+		-webkit-box-shadow: none;
+		box-shadow: none;
+	}
+}
+.ui-btn-defalut{
+	background-color: $defalut;
+	border-color: $defalut;
+	&:hover{
+		background-color: lighten($defalut, 5%);
+	}
+}
+.ui-btn-normal{
+	background-color: $normal;
+	border-color: $normal;
+	&:hover{
+		background-color: lighten($normal, 8%);
+	}
+}
+.ui-btn-warm{
+	background-color: $warm;
+	border-color: $warm;
+	&:hover{
+		background-color: lighten($warm, 8%);
+	}
+}
+.ui-btn-danger{
+	background-color: $danger;
+	border-color: $danger;
+	&:hover{
+		background-color: darken($danger, 10%);
+	}
+}
+
+.ui-btn-primary{
+	background-color: $primary;
+	border-color: $primary;
+	&:hover{
+		background-color: darken($primary, 10%);
+	}
+}
+.ui-btn-success{
+	background-color: $success;
+	border-color: $success;
+	&:hover{
+		background-color: darken($success, 10%);
+	}
+}
+.ui-btn-info{
+	background-color: $info;
+	border-color: $info;
+	&:hover{
+		background-color: darken($info, 10%);
+	}
+}
+.ui-btn-warning{
+	background-color: $warning;
+	border-color: $warning;
+	&:hover{
+		background-color: darken($warning, 10%);
+	}
+}
+.ui-btn-deepred{
+	background-color: $deepred;
+	border-color: $deepred;
+	&:hover{
+		background-color: darken($deepred, 10%);
+	}
+}
+.ui-btn-black{
+	background-color: $black;
+	border-color: $black;
+	&:hover{
+		background-color: darken($black, 10%);
+	}
+}
+.ui-btn-maroon{
+	background-color: $maroon;
+	border-color: $maroon;
+	&:hover{
+		background-color: darken($maroon, 10%);
+	}
+}
+
+.ui-radius{
+	border-radius: 100px !important;
+}
+[class*="-outline"]{
+	background-color: #fff;
+	&:hover{
+		color: #fff;
+	}
+}
+.ui-btn-raw-outline{
+	color: #555;
+	border-color: #ccc;
+	&:hover{
+		border-color: #ababab;
+		background-color: #ababab;
+	}
+}
+.ui-btn-defalut-outline{
+	color: $defalut;
+	border-color: $defalut;
+	&:hover{
+		background-color: $defalut;
+	}
+}
+.ui-btn-normal-outline{
+	color: $normal;
+	border-color: $normal;
+	&:hover{
+		background-color: $normal;
+	}
+}
+.ui-btn-warm-outline{
+	color: $warm;
+	border-color: $warm;
+	&:hover{
+		background-color: $warm;
+	}
+}
+.ui-btn-danger-outline{
+	color: $danger;
+	border-color: $danger;
+	&:hover{
+		background-color: $danger;
+	}
+}
+.ui-btn-primary-outline{
+	color: $primary;
+	border-color: $primary;
+	&:hover{
+		background-color: $primary;
+	}
+}
+.ui-btn-success-outline{
+	color: $success;
+	border-color: $success;
+	&:hover{
+		background-color: $success;
+	}
+}
+.ui-btn-info-outline{
+	color: $info;
+	border-color: $info;
+	&:hover{
+		background-color: $info;
+	}
+}
+.ui-btn-warning-outline{
+	color: $warning;
+	border-color: $warning;
+	&:hover{
+		background-color: $warning;
+	}
+}
+.ui-btn-deepred-outline{
+	color: $deepred;
+	border-color: $deepred;
+	&:hover{
+		background-color: $deepred;
+	}
+}
+.ui-btn-black-outline{
+	color: $black;
+	border-color: $black;
+	&:hover{
+		background-color: $black;
+	}
+}
+.ui-btn-maroon-outline{
+	color: $maroon;
+	border-color: $maroon;
+	&:hover{
+		background-color: $maroon;
+	}
 }
