--- a/sass/ui/module/reset.scss
+++ b/sass/ui/module/reset.scss
@@ -9,10 +9,10 @@ abbr,acronym{border:0;font-variant:normal}
 sup{vertical-align:text-top}
 a{text-decoration:none;color:inherit;}
 sub{vertical-align:text-bottom}
-input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit}
+input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit; outline: none;}
 body{font:14px/1.5 \5FAE\8F6F\96C5\9ED1,sans-serif; color: #333;}
-.clearfix:after{content:"\0020";height:0;display:block;clear:both;}
-.clearfix{zoom:1;}
+.clear:after{content:"\0020";height:0;display:block;clear:both;}
+.clear{zoom:1;}
 em,i{font-style: normal;}
 img{display:block;border:0}
 *, :after, :before {box-sizing: border-box;}
