--- a/views/button.html
+++ b/views/button.html
@@ -1,5 +1,5 @@
 <div class="view-box">
-	<div class="ui-quote" style="margin-top: 0">常用按钮</div>
+	<div class="ui-quote">按钮</div>
 	<div class="ui-table-box">
 		<table class="ui-table" ui-border="all">
 			<colgroup>
@@ -58,7 +58,7 @@
 	</div>
 	<div class="fr-box clear">
 		<div class="w48">
-			<div class="ui-quote">内置按钮</div>
+			<div class="ui-title-h2">内置按钮</div>
 			<div class="ui-table-box">
 				<table class="ui-table" ui-border="all">
 					<colgroup>
@@ -114,7 +114,7 @@
 			</div>
 		</div>
 		<div class="w48">
-			<div class="ui-quote">按钮大小</div>
+			<div class="ui-title-h2">按钮大小</div>
 			<div class="ui-table-box">
 				<table class="ui-table" ui-border="all">
 					<colgroup>
@@ -155,7 +155,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="ui-quote">半圆按钮</div>
+	<div class="ui-title-h2">半圆按钮</div>
 	<div class="ui-table-box">
 		<table class="ui-table" ui-border="all">
 			<colgroup>
@@ -200,7 +200,7 @@
 			</tbody>
 		</table>
 	</div>
-	<div class="ui-quote">其它场景按钮</div>
+	<div class="ui-title-h2">其它场景按钮</div>
 	<div class="ui-table-box">
 		<table class="ui-table" ui-border="all">
 			<colgroup>
@@ -303,13 +303,16 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td colspan="4"><a href="javascript: void(0);" class="ui-btn-deepred ui-width">ui-btn-deepred ui-width</a></td>
+					<td colspan="4"><a href="javascript: void(0);" class="ui-btn-deepred ui-width ui-large">ui-btn-deepred ui-width ui-large</a></td>
 				</tr>
 				<tr>
 					<td colspan="4"><a href="javascript: void(0);" class="ui-btn-info ui-width">ui-btn-info ui-width</a></td>
 				</tr>
 				<tr>
-					<td colspan="4"><a href="javascript: void(0);" class="ui-btn-black ui-width">ui-btn-black ui-width</a></td>
+					<td colspan="4"><a href="javascript: void(0);" class="ui-btn-black ui-width ui-small">ui-btn-black ui-width ui-small</a></td>
+				</tr>
+				<tr>
+					<td colspan="4"><a href="javascript: void(0);" class="ui-btn-info-outline ui-width">ui-btn-info-outline ui-width</a></td>
 				</tr>
 			</tbody>
 		</table>
@@ -329,9 +332,6 @@
 		overflow:hidden;
 		white-space:nowrap;
 		text-overflow:ellipsis;
-	}
-	.ui-quote{
-		margin-top: 20px;
 	}
 	.fr-box>div{
 		width: 49.2%;
