--- a/views/form.html
+++ b/views/form.html
@@ -1,3 +1,412 @@
 <div class="view-box">
-	<div class="ui-quote">表单元素</div>
+	<!-- <div class="ui-quote">表单元素</div> -->
+	<div class="ui-title-h2" style="margin-top: 0">input/textarea输入框</div>
+	<div class="ui-form">
+		<div class="ui-items ui-large">
+			<label for="" class="ui-wd-2 ui-label" align="right">大号输入框</label>
+			<div class="ui-wd-6">
+				<input type="text" class="ui-input" placeholder="ui-wd-8">
+			</div>
+			<div class="ui-wd-4 ui-form-tip">禁止输入特殊字符</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">默认输入框</label>
+			<div class="ui-wd-6">
+				<input type="text" class="ui-input" placeholder="ui-wd-8">
+			</div>
+			<div class="ui-wd-4 ui-form-tip">禁止输入特殊字符</div>
+		</div>
+		<div class="ui-items ui-small">
+			<label for="" class="ui-wd-2 ui-label" align="right">小号输入框</label>
+			<div class="ui-wd-6">
+				<input type="text" class="ui-input" placeholder="ui-wd-8">
+			</div>
+			<div class="ui-wd-4 ui-form-tip">禁止输入特殊字符</div>
+		</div>
+		<div class="ui-items ui-small">
+			<label for="" class="ui-wd-2 ui-label" align="right">小号输入框</label>
+			<div class="ui-wd-2">
+				<input type="text" class="ui-input" placeholder="ui-wd-2">
+			</div>
+			<div class="ui-wd-3">
+				<input type="text" class="ui-input" placeholder="ui-wd-3">
+			</div>
+			<div class="ui-wd-5">
+				<input type="text" class="ui-input" placeholder="ui-wd-5">
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">禁止输入</label>
+			<div class="ui-wd-10">
+				<input type="text" class="ui-input" placeholder="ui-wd-8" disabled>
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">输入框文字居中</label>
+			<div class="ui-wd-10">
+				<input type="text" class="ui-input" placeholder="ui-wd-8" align="center">
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">输入框文字向右</label>
+			<div class="ui-wd-10">
+				<input type="text" class="ui-input" placeholder="ui-wd-8" align="right">
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">输入框有提示符</label>
+			<div class="ui-wd-10">
+				<i class="ui-icon ui-input-icon">&#xe67e;</i>
+				<input type="text" class="ui-input" placeholder="ui-wd-8">
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">输入框有提示符</label>
+			<div class="ui-wd-10">
+				<i class="ui-icon ui-input-icon" position="right">&#xe67e;</i>
+				<input type="text" class="ui-input" placeholder="ui-wd-8">
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">鼠标放上去有提示</label>
+			<div class="ui-wd-10">
+				<input type="text" class="ui-input" placeholder="ui-wd-8">
+				<div class="ui-input-prompt" align="left"><div>提示输入内容错误</div></div>
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">鼠标放上去有提示</label>
+			<div class="ui-wd-10">
+				<input type="text" class="ui-input" placeholder="ui-wd-8">
+				<div class="ui-input-prompt ui-error"><div>提示输入内容错误</div></div>
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">鼠标放上去有提示</label>
+			<div class="ui-wd-10">
+				<input type="text" class="ui-input" placeholder="ui-wd-8">
+				<div class="ui-input-prompt" align="right"><div>提示输入内容错误</div></div>
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">文本域</label>
+			<div class="ui-wd-10">
+				<textarea name="" id="" class="ui-textarea"></textarea>
+			</div>
+		</div>
+	</div>
+	<div class="ui-title-h2">select</div>
+	<div class="ui-form">
+		<div class="ui-items ui-large">
+			<label for="" class="ui-wd-2 ui-label" align="right">select选择框-大号</label>
+			<div class="ui-wd-3">
+				<select name="" id="" class="ui-select">
+					<option value="0">北京</option>
+					<option value="1">上海</option>
+					<option value="2">广州</option>
+					<option value="3">深圳</option>
+					<option value="4">杭州</option>
+				</select>
+				<i class="ui-icon">&#xe65c;</i>
+			</div>
+			<div class="ui-wd-4 ui-form-tip">禁止输入特殊字符</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">select选择框-默认</label>
+			<div class="ui-wd-3">
+				<select name="" id="" class="ui-select">
+					<option value="0">北京</option>
+					<option value="1">上海</option>
+					<option value="2">广州</option>
+					<option value="3">深圳</option>
+					<option value="4">杭州</option>
+				</select>
+				<i class="ui-icon">&#xe65c;</i>
+			</div>
+			<div class="ui-wd-4 ui-form-tip">禁止输入特殊字符</div>
+		</div>
+		<div class="ui-items ui-small">
+			<label for="" class="ui-wd-2 ui-label" align="right">select选择框-小号</label>
+			<div class="ui-wd-3">
+				<select name="" id="" class="ui-select">
+					<option value="0">北京</option>
+					<option value="1">上海</option>
+					<option value="2">广州</option>
+					<option value="3">深圳</option>
+					<option value="4">杭州</option>
+				</select>
+				<i class="ui-icon">&#xe65c;</i>
+			</div>
+			<div class="ui-wd-4 ui-form-tip">禁止输入特殊字符</div>
+		</div>
+	</div>
+	<div class="ui-title-h2">checkbox/radio</div>
+	<div class="ui-form">
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">复选按钮组</label>
+			<div class="ui-wd-10">
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="box1" />
+					<label for="box1" class="ui-checkbox-label">北京</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="box2" />
+					<label for="box2" class="ui-checkbox-label">上海</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="box3" />
+					<label for="box3" class="ui-checkbox-label">广州</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="box4" disabled />
+					<label for="box4" class="ui-checkbox-label">禁用</label>
+				</div>
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">复选按钮组</label>
+			<div class="ui-wd-10">
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d0" />
+					<label for="d0" class="ui-checkbox-label">default</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d1" />
+					<label for="d1" class="ui-checkbox-label ui-normal">normal</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d2" />
+					<label for="d2" class="ui-checkbox-label ui-warm">warm</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d3" />
+					<label for="d3" class="ui-checkbox-label ui-danger">danger</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d4" />
+					<label for="d4" class="ui-checkbox-label ui-primary">primary</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d5" />
+					<label for="d5" class="ui-checkbox-label ui-success">success</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d6" />
+					<label for="d6" class="ui-checkbox-label ui-info">info</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d7" />
+					<label for="d7" class="ui-checkbox-label ui-deepred">deepred</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d8" />
+					<label for="d8" class="ui-checkbox-label ui-black">black</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d9" />
+					<label for="d9" class="ui-checkbox-label ui-maroon">maroon</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="d10" />
+					<label for="d10" class="ui-checkbox-label ui-warning">warning</label>
+				</div>
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">复选按钮组</label>
+			<div class="ui-wd-10">
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e0" />
+					<label for="e0" class="ui-checkbox-label ui-solid">default</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e1" />
+					<label for="e1" class="ui-checkbox-label ui-solid ui-normal">normal</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e2" />
+					<label for="e2" class="ui-checkbox-label ui-solid ui-warm">warm</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e3" />
+					<label for="e3" class="ui-checkbox-label ui-solid ui-danger">danger</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e4" />
+					<label for="e4" class="ui-checkbox-label ui-solid ui-primary">primary</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e5" />
+					<label for="e5" class="ui-checkbox-label ui-solid ui-success">success</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e6" />
+					<label for="e6" class="ui-checkbox-label ui-solid ui-info">info</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e7" />
+					<label for="e7" class="ui-checkbox-label ui-solid ui-deepred">deepred</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e8" />
+					<label for="e8" class="ui-checkbox-label ui-solid ui-black">black</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e9" />
+					<label for="e9" class="ui-checkbox-label ui-solid ui-maroon">maroon</label>
+				</div>
+				<div class="ui-checkbox-box">
+					<input type="checkbox" class="ui-checkbox" id="e10" />
+					<label for="e10" class="ui-checkbox-labe ui-solidl ui-warning">warning</label>
+				</div>
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">单选按钮组</label>
+			<div class="ui-wd-10">
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="r1" name="radio">
+					<label for="r1" class="ui-radio-label">北京</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="r2" name="radio">
+					<label for="r2" class="ui-radio-label">上海</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="r3" name="radio">
+					<label for="r3" class="ui-radio-label">广州</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="r4" name="radio" disabled>
+					<label for="r4" class="ui-radio-label">禁用</label>
+				</div>
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">单选按钮组</label>
+			<div class="ui-wd-10">
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra0" name="radioo" />
+					<label for="ra0" class="ui-radio-label">default</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra1" name="radioo" />
+					<label for="ra1" class="ui-radio-label ui-normal">normal</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra2" name="radioo" />
+					<label for="ra2" class="ui-radio-label ui-warm">warm</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra3" name="radioo" />
+					<label for="ra3" class="ui-radio-label ui-danger">danger</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra4" name="radioo" />
+					<label for="ra4" class="ui-radio-label ui-primary">primary</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra5" name="radioo" />
+					<label for="ra5" class="ui-radio-label ui-success">success</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra6" name="radioo" />
+					<label for="ra6" class="ui-radio-label ui-info">info</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra7" name="radioo" />
+					<label for="ra7" class="ui-radio-label ui-deepred">deepred</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra8" name="radioo" />
+					<label for="ra8" class="ui-radio-label ui-black">black</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra9" name="radioo" />
+					<label for="ra9" class="ui-radio-label ui-maroon">maroon</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra10" name="radioo" />
+					<label for="ra10" class="ui-radio-label ui-warning">warning</label>
+				</div>
+			</div>
+		</div>
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">单选按钮组</label>
+			<div class="ui-wd-10">
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra01" name="radioa" />
+					<label for="ra01" class="ui-radio-label ui-solid">default</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra11" name="radioa" />
+					<label for="ra11" class="ui-radio-label ui-solid ui-normal">normal</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra21" name="radioa" />
+					<label for="ra21" class="ui-radio-label ui-solid ui-warm">warm</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra31" name="radioa" />
+					<label for="ra31" class="ui-radio-label ui-solid ui-danger">danger</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra41" name="radioa" />
+					<label for="ra41" class="ui-radio-label ui-solid ui-primary">primary</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra51" name="radioa" />
+					<label for="ra51" class="ui-radio-label ui-solid ui-success">success</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra61" name="radioa" />
+					<label for="ra61" class="ui-radio-label ui-solid ui-info">info</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra71" name="radioa" />
+					<label for="ra71" class="ui-radio-label ui-solid ui-deepred">deepred</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra81" name="radioa" />
+					<label for="ra81" class="ui-radio-label ui-solid ui-black">black</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra91" name="radioa" />
+					<label for="ra91" class="ui-radio-label ui-solid ui-maroon">maroon</label>
+				</div>
+				<div class="ui-radio-box">
+					<input type="radio" class="ui-radio" id="ra101" name="radioa" />
+					<label for="ra101" class="ui-radio-label ui-solid ui-warning">warning</label>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="ui-title-h2">switch</div>
+	<div class="ui-form">
+		<div class="ui-items">
+			<label for="" class="ui-wd-2 ui-label" align="right">开关</label>
+			<div class="ui-wd-10">
+				<div class="ui-switch-box">
+					<input type="checkbox" id="s">
+					<label for="s" class="ui-switch" data-switch-true="开启" data-switch-false="关闭"></label>
+				</div>
+				<div class="ui-switch-box">
+					<input type="checkbox" id="s1">
+					<label for="s1" class="ui-switch" data-switch-true="ON" data-switch-false="OFF"></label>
+				</div>
+				<div class="ui-switch-box">
+					<input type="checkbox" id="s21">
+					<label for="s21" class="ui-switch"></label>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
+<style>
+	.body .ui-input-prompt{
+		opacity: 1;
+		visibility: visible;
+		transform: none;
+		-webkit-transform: none;
+	}
+</style>
