--- a/views/home.html
+++ b/views/home.html
@@ -62,3 +62,6 @@
 		</div>
 	</div>
 </div>
+<script>
+	$('.ui-nav-items li').eq(0).addClass('active').children('div').css('height',$('.ui-nav-items li').eq(0).children('div').children('a').length * $('.ui-nav-items li').eq(0).children('div').children('a').height());
+</script>
