--- a/sass/ui/module/loading.scss
+++ b/sass/ui/module/loading.scss
@@ -124,3 +124,18 @@
 	0%	{-webkit-transform: translate3d(0,-30px,0);}
 	100%{-webkit-transform: none;}
 }
+
+
+.ui-load-rote{
+  display: block;
+  width: 100px;
+  height: 100px;
+  font-size: 100px;
+  line-height: 87px;
+  transform-origin: 50px 52px;
+  animation: loadRote 1s linear infinite;
+}
+@keyframes loadRote{
+  0%  {transform: rotateZ(0);}
+  100%{transform: rotateZ(360deg);}
+}
