--- a/sass/ui/module/reset.scss
+++ b/sass/ui/module/reset.scss
@@ -8,8 +8,7 @@ q:before,q:after{content:''}
 abbr,acronym{border:0;font-variant:normal}
 sup{vertical-align:text-top}
 a{text-decoration:none;color:inherit;}
-sub{vertical-align:text-bottom}
-input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit; outline: none;}
+sub{vertical-align:text-bottom;}
 body{font:14px/1.5 \5FAE\8F6F\96C5\9ED1,sans-serif; color: #333;}
 .clear:after{content:"\0020";height:0;display:block;clear:both;}
 .clear{zoom:1;}
