--- a/sass/ui/module/style.scss
+++ b/sass/ui/module/style.scss
@@ -16,12 +16,18 @@
 }
 .ui-quote{
 	margin-bottom: 20px;
-	padding: 15px;
+	padding: 12px 15px;
 	line-height: 22px;
-	border-left: 5px solid #00a2ca;
+	border-left: 3px solid #00a2ca;
 	border-radius: 0 2px 2px 0;
 	background-color: #f2f2f2;
+	&.ui-prompt{
+		color: #d65c4f;
+		border-left-color: #d65c4f;
+		background-color: #fdf7f7;
+	}
 }
+
 .ui-pre-code{
 	width: 100%;
 	height: 700px;
