--- a/views/button.html
+++ b/views/button.html
@@ -58,7 +58,7 @@
 	</div>
 	<div class="fr-box clear">
 		<div class="w48">
-			<div class="ui-title-h2">内置按钮</div>
+			<div class="ui-tle-h2">内置按钮</div>
 			<div class="ui-table-box">
 				<table class="ui-table" ui-border="all">
 					<colgroup>
@@ -114,7 +114,7 @@
 			</div>
 		</div>
 		<div class="w48">
-			<div class="ui-title-h2">按钮大小</div>
+			<div class="ui-tle-h2">按钮大小</div>
 			<div class="ui-table-box">
 				<table class="ui-table" ui-border="all">
 					<colgroup>
@@ -155,7 +155,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="ui-title-h2">半圆按钮</div>
+	<div class="ui-tle-h2">半圆按钮</div>
 	<div class="ui-table-box">
 		<table class="ui-table" ui-border="all">
 			<colgroup>
@@ -200,7 +200,7 @@
 			</tbody>
 		</table>
 	</div>
-	<div class="ui-title-h2">其它场景按钮</div>
+	<div class="ui-tle-h2">其它场景按钮</div>
 	<div class="ui-table-box">
 		<table class="ui-table" ui-border="all">
 			<colgroup>
