--- a/views/form.html
+++ b/views/form.html
@@ -1,6 +1,6 @@
 <div class="view-box">
 	<!-- <div class="ui-quote">表单元素</div> -->
-	<div class="ui-title-h2" style="margin-top: 0">input/textarea输入框</div>
+	<div class="ui-tle-h2" style="margin-top: 0">input/textarea输入框</div>
 	<div class="ui-form">
 		<div class="ui-items ui-large">
 			<label for="" class="ui-wd-2 ui-label" align="right">大号输入框</label>
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="ui-title-h2">select</div>
+	<div class="ui-tle-h2">select</div>
 	<div class="ui-form">
 		<div class="ui-items ui-large">
 			<label for="" class="ui-wd-2 ui-label" align="right">select选择框-大号</label>
@@ -140,7 +140,7 @@
 			<div class="ui-wd-4 ui-form-tip">禁止输入特殊字符</div>
 		</div>
 	</div>
-	<div class="ui-title-h2">checkbox/radio</div>
+	<div class="ui-tle-h2">checkbox/radio</div>
 	<div class="ui-form">
 		<div class="ui-items">
 			<label for="" class="ui-wd-2 ui-label" align="right">复选按钮组</label>
@@ -381,7 +381,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="ui-title-h2">switch</div>
+	<div class="ui-tle-h2">switch</div>
 	<div class="ui-form">
 		<div class="ui-items">
 			<label for="" class="ui-wd-2 ui-label" align="right">开关</label>
