--- a/views/home.html
+++ b/views/home.html
@@ -20,6 +20,7 @@
 				<a href="javascript: void(0);" ui-sref="home.tabs"><i class="ui-icon ui-icon-show">&#xe627;</i><span>选项卡</span></a>
 				<a href="javascript: void(0);" ui-sref="home.iconfont"><i class="ui-icon ui-icon-show">&#xe629;</i><span>字体</span></a>
 				<a href="javascript: void(0);" ui-sref="home.loading"><i class="ui-icon ui-icon-show">&#xe626;</i><span>loading</span></a>
+				<a href="javascript: void(0);" ui-sref="home.title"><i class="ui-icon ui-icon-show">&#xe616;</i><span>标题与引用</span></a>
 			</div>
 		</li>
 		<li>
